feat(notes): filter by range date
